The Save Place 0.6.2
# CHANGELOG v0.6.2 - "I Save You"

**Data di Rilascio:** 26 Agosto 2025
**Tipo:** Versione Intermedia - Sistema Save/Load Avanzato
**Stato:** Completata ✅

---

## 📋 PANORAMICA VERSIONE

La versione 0.6.2 "I Save You" rappresenta un importante aggiornamento intermedio che introduce un sistema di salvataggio e caricamento completamente rinnovato, insieme a significativi miglioramenti ai sistemi di gioco esistenti. Questa versione si concentra sull'esperienza utente e sulla robustezza del sistema di persistenza dei dati.

---

## 🎯 OBIETTIVI RAGGIUNTI

### Sistema Save/Load User-Friendly
- ✅ Interfaccia di caricamento completamente rinnovata
- ✅ Sistema di notifiche avanzato per feedback operazioni
- ✅ Funzionalità export/import salvataggi
- ✅ Recovery automatico per salvataggi corrotti
- ✅ Validazione e compatibilità versioni

### Sistemi di Gioco Migliorati
- ✅ Sistema meteo dinamico completo
- ✅ Attraversamento fiumi con conseguenze reali
- ✅ Eventi trasparenti con skill check dettagliati
- ✅ Sistema rifugi anti-exploit
- ✅ Bilanciamento probabilità eventi

---

## 🚀 NUOVE FUNZIONALITÀ

### 📁 Sistema Save/Load Avanzato

#### LoadScreen Component
- **Interfaccia elegante** con design coerente al tema retrò
- **Navigazione keyboard** intuitiva (↑↓, ENTER, ESC)
- **Preview dettagliati** per ogni salvataggio:
  - Nome personaggio e livello
  - Posizione attuale nel mondo
  - Tempo di gioco totale
  - Data e ora ultimo salvataggio
  - Versione del salvataggio
- **Gestione slot multipli** (5 slot + autosave + quicksave)

#### Sistema Notifiche
- **4 tipi di notifiche**: Success, Error, Warning, Info
- **Animazioni fluide** con slide-in e fade-out
- **Durata personalizzabile** per ogni tipo di messaggio
- **Dismissal manuale** con pulsante di chiusura
- **Posizionamento ottimale** (top-right, non invasivo)

#### Export/Import Salvataggi
- **Export automatico** con download file JSON
- **Nomi file intelligenti**: `TheSafePlace_NomePersonaggio_Lv5_Slot1

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "the-safe-place",
   "private": true,
-  "version": "0.6.0",
-  "codename": "Lazarus Rising Again",
+  "version": "0.6.2",
+  "codename": "I Save You",
   "type": "module",
   "description": "The Safe Place - GDR Retrocomputazionale a Fosfori Verdi - Sistema di gioco avanzato con meccaniche D&D e atmosfera CRT anni '80",
   "author": "TheSafePlace Development Team",
